GL/Projet_GL/src/test/deca/context/valid/sansObjet/bool/valid_boolean_nega.deca
// Test : valid_not_operator
// But : autoriser l’opérateur logique ! sur un booléen.
// Couvre : opérateur unaire logique.
// Résultat attendu : programme valide.

{
    boolean b;
    b = !false;
}